securitygp.tf
# Create Security Group for Kubernetes nodes
resource "aws_security_group" "kubernetes_sg" {
  vpc_id = aws_vpc.kubernetes_vpc.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "kubernetes-security-group"
  }
}
